--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -5,7 +5,7 @@
     <ScrollView x:Name="scrollView" HeightRequest="650">
         <StackLayout Margin="0,20,0,0" Padding="10" >
             <VerticalStackLayout Spacing="10">
-                <Button x:Name="ButtonAskForChange" Text="Update Canyon" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
+                <Button x:Name="ButtonAskForChange" Text="This canyon need an Update !" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                 <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,*,*,*,*,*,*,*" HorizontalOptions="CenterAndExpand" >
                     <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand"   FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
                     <Button Grid.Column="1" Grid.Row="0" Text="Modify" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
@@ -32,17 +32,17 @@
 
                 </Grid>
             </VerticalStackLayout>
-            <Frame Padding="10" BorderColor="Red" Margin="0,30,0,0"  BackgroundColor="Transparent" WidthRequest="200">
-                <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
+            <Frame Padding="10" BorderColor="Red" Margin="0,30,0,0"  BackgroundColor="Transparent" >
+                <StackLayout >
                     <Image Aspect="AspectFit" Source="desescalade.png" />
-                    <Label VerticalOptions="Center" Text="Warning" FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
-                </HorizontalStackLayout>
+                    <Label  Text="Canyoning is a dangerous activity and cannot be improvised. The writing paths in the application may contain errors or be out of date. Do not enter a canyon without knowledge of the specific technic to this sport and suitable equipment. Do not hesitate to vary your sources of information, to consult the weather forecast and the various user comments. For more information on security, go to the dedicated tab of the application." FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
+                </StackLayout>
             </Frame>
             <Grid RowSpacing="0" x:Name="gridView" RowDefinitions="*,*,*,*,*,*" ColumnDefinitions="*,*" ColumnSpacing="0" >
                 <HorizontalStackLayout Grid.Row="0" Grid.Column="0">
                     <Image Margin="10,15,5,15"  Aspect="AspectFit" Source="starblue.png"/>
                     <StackLayout Spacing="0"   VerticalOptions="CenterAndExpand">
-                        <Label  Text="Note"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Rating :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="noteCanyon" Text="3.5/4"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -50,7 +50,7 @@
                 <HorizontalStackLayout Grid.Row="0" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="cotation.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Cotation"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Difficulty Scale :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="cotationCanyon" Text="v4A12"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -58,7 +58,7 @@
                 <HorizontalStackLayout Grid.Row="1" Grid.Column="0">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="corde.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Rope"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Rope :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="cordeCanyon" Text="120m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -66,7 +66,7 @@
                 <HorizontalStackLayout Grid.Row="1" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="cascade.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="WaterfallMax"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Max. Waterfall :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="cascademaxCanyon" Text="132m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14" />
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -74,7 +74,7 @@
                 <HorizontalStackLayout Grid.Row="2" Grid.Column="0">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="montagne.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="StartAltitude"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Start Altitude :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="altitudeCanyon" Text="1220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -82,7 +82,7 @@
                 <HorizontalStackLayout Grid.Row="2" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="metre.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="LenghtCanyon"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Canyon Lenght :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="longueurCanyon" Text="1220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -90,7 +90,7 @@
                 <HorizontalStackLayout  Grid.Row="3" Grid.Column="0">
                     <Image Margin="10,15,5,15"  Aspect="AspectFit" Source="denivele.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Denivele"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Elevation :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="denivCanyon" Text="220m" FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -98,7 +98,7 @@
                 <HorizontalStackLayout  Grid.Row="3" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="marche.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Approche"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Approach :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="approcheCanyon" Text="00h20"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -106,7 +106,7 @@
                 <HorizontalStackLayout  Grid.Row="4" Grid.Column="0">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="descenteActif.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Descent"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Descent :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="descentCanyon" Text="220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -114,7 +114,7 @@
                 <HorizontalStackLayout  Grid.Row="4" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="retour.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Retour"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Return trip :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="retourCanyon" Text="220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -122,7 +122,7 @@
                 <HorizontalStackLayout  Grid.Row="5" Grid.Column="0">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="voiture.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Navette" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Shuttle :" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="navetteCanyon" Text="220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -130,7 +130,7 @@
                 <HorizontalStackLayout Grid.Row="5" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="obstacles.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Obstacles"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Number of obstacles :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="obstacleCanyon"  Text="-"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
@@ -138,9 +138,10 @@
             <Frame Padding="10" BorderColor="Red" Margin="0,30,0,0"  BackgroundColor="Transparent" WidthRequest="200">
                 <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
                     <Image Aspect="AspectFit" Source="desescalade.png" />
-                    <Label VerticalOptions="Center" Text="Translate" FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
+                    <Label VerticalOptions="Center" Text="Translated from french with google translate" FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
                 </HorizontalStackLayout>
             </Frame>
+            <BoxView HeightRequest=".5" Color="#90E0EF" Margin="8,10"  />
             <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
 
                 <ListView x:Name="commentListView" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None"  ItemsSource="{Binding CanyonCommentList}">
@@ -166,32 +167,32 @@
                                             </VerticalStackLayout>
 
                                             <VerticalStackLayout Spacing="5" Grid.Row="1" Grid.Column="1">
-                                                <Label Text="Retour"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="Return trip :"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
                                                 <Label Text="{Binding Retour}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
                                             </VerticalStackLayout>
 
                                             <VerticalStackLayout Spacing="5" Grid.Row="2" Grid.Column="0" >
-                                                <Label Text="Engagement" LineBreakMode="WordWrap"  TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="Engagement :" LineBreakMode="WordWrap"  TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
                                                 <Label WidthRequest="100" Text="{Binding Engagement}" HorizontalOptions="StartAndExpand" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
                                             </VerticalStackLayout>
 
                                             <VerticalStackLayout Spacing="5" Grid.Row="2" Grid.Column="1">
-                                                <Label Text="Historique"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="History :"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
                                                 <Label Text="{Binding Historique}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
                                             </VerticalStackLayout>
 
                                             <VerticalStackLayout Spacing="5" Grid.Row="3" Grid.Column="0">
-                                                <Label Text="Remarque"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="Comment :"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
                                                 <Label Text="{Binding Remarque}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
                                             </VerticalStackLayout>
 
                                             <VerticalStackLayout Spacing="5" Grid.Row="3" Grid.Column="1">
-                                                <Label Text="Geologie"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="Geology :"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
                                                 <Label Text="{Binding Geologie}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
                                             </VerticalStackLayout>
 
                                             <VerticalStackLayout Spacing="5" Grid.Row="4" Grid.Column="0">
-                                                <Label Text="Periode"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="Best period :"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
                                                 <Label Text="{Binding Periode}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
                                             </VerticalStackLayout>
                                         </Grid>
@@ -203,6 +204,8 @@
                 </ListView>
 
             </Frame>
+
+            <BoxView HeightRequest=".5" Color="#90E0EF" Margin="8,10"  />
 
             <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
                 <ListView x:Name="sourceUserListView" ItemsSource="{Binding UserCreatorList}" SeparatorVisibility="None" SelectionMode="None" HasUnevenRows="True">
