--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -10,25 +10,25 @@
                     <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand"   FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
                     <Button Grid.Column="1" Grid.Row="0" Text="Modify" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                     <Label Margin="0,20,0,0" Grid.Column="0" Grid.Row="1" Text="Country" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
-                    <Label Margin="0,20,0,0" Grid.Column="1" Grid.Row="1" x:Name="countryCanyon" TextColor="#00B4D8" VerticalOptions="Center" HorizontalOptions="Start" FontSize="14" Text="Nouvelle-Zélande"/>
+                    <Label Margin="0,20,0,0" Grid.Column="1" Grid.Row="1" x:Name="countryCanyon" TextColor="#00B4D8" VerticalOptions="Center" HorizontalOptions="Start" FontSize="14"/>
 
                     <Label  Grid.Column="0" Grid.Row="2" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="14" Text="Region"/>
-                    <Label Grid.Column="1" Grid.Row="2" x:Name="regionCanyon"  VerticalOptions="Center" HorizontalOptions="Start"   FontSize="14" Text="Region" TextColor="#00B4D8"/>
+                    <Label Grid.Column="1" Grid.Row="2" x:Name="regionCanyon"  VerticalOptions="Center" HorizontalOptions="Start"   FontSize="14"  TextColor="#00B4D8"/>
 
                     <Label Grid.Column="0" Grid.Row="3" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="14" Text="State"/>
-                    <Label Grid.Column="1" Grid.Row="3" x:Name="stateCanyon"  VerticalOptions="Center" HorizontalOptions="Start" FontSize="14" Text="Departement" TextColor="#00B4D8"/>
+                    <Label Grid.Column="1" Grid.Row="3" x:Name="stateCanyon"  VerticalOptions="Center" HorizontalOptions="Start" FontSize="14"  TextColor="#00B4D8"/>
 
                     <Label Grid.Column="0" Grid.Row="4" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="City"/>
-                    <Label Grid.Column="1" Grid.Row="4" x:Name="cityCanyon"   VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" Text="Commune" TextColor="#00B4D8"/>
+                    <Label Grid.Column="1" Grid.Row="4" x:Name="cityCanyon"   VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15"  TextColor="#00B4D8"/>
 
                     <Label Grid.Column="0" Grid.Row="5"  VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="Mountain"/>
-                    <Label Grid.Column="1" Grid.Row="5" x:Name="mountainCanyon"  VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" Text="Massif" TextColor="#00B4D8"/>
+                    <Label Grid.Column="1" Grid.Row="5" x:Name="mountainCanyon"  VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" TextColor="#00B4D8"/>
 
                     <Label Grid.Column="0" Grid.Row="6" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="Bassin"/>
-                    <Label Grid.Column="1" Grid.Row="6" x:Name="bassinCanyon"  VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" Text="Bassin" TextColor="#00B4D8"/>
+                    <Label Grid.Column="1" Grid.Row="6" x:Name="bassinCanyon"  VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" TextColor="#00B4D8"/>
 
                     <Label Grid.Column="0" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="River"/>
-                    <Label Grid.Column="1" Grid.Row="7" x:Name="riverCanyon"   VerticalOptions="Center" HorizontalOptions="Start"   FontSize="15" Text="Cours d'eau" TextColor="#00B4D8"/>
+                    <Label Grid.Column="1" Grid.Row="7" x:Name="riverCanyon"   VerticalOptions="Center" HorizontalOptions="Start"   FontSize="15" TextColor="#00B4D8"/>
 
                 </Grid>
             </VerticalStackLayout>
@@ -130,12 +130,12 @@
                 <HorizontalStackLayout Grid.Row="5" Grid.Column="1">
                     <Image Margin="10,15,5,15" Aspect="AspectFit" Source="obstacles.png"/>
                     <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
-                        <Label  Text="Number of obstacles :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label  Text="Number of&#x0a; obstacles :"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                         <Label x:Name="obstacleCanyon"  Text="-"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
                     </StackLayout>
                 </HorizontalStackLayout>
             </Grid>
-            <Frame Padding="10" BorderColor="Red" Margin="0,30,0,0"  BackgroundColor="Transparent" WidthRequest="200">
+            <Frame Padding="10" BorderColor="Red" BackgroundColor="Transparent" Margin="0,30,0,0"   >
                 <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
                     <Image Aspect="AspectFit" Source="desescalade.png" />
                     <Label VerticalOptions="Center" Text="Translated from french with google translate" FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
@@ -144,7 +144,7 @@
             <BoxView HeightRequest=".5" Color="#90E0EF" Margin="8,10"  />
             <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
 
-                <ListView x:Name="commentListView" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None"  ItemsSource="{Binding CanyonCommentList}">
+                <ListView x:Name="commentListView" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None"  ItemsSource="{Binding CommentsList}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -204,9 +204,7 @@
                 </ListView>
 
             </Frame>
-
             <BoxView HeightRequest=".5" Color="#90E0EF" Margin="8,10"  />
-
             <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" >
                 <ListView x:Name="sourceUserListView" ItemsSource="{Binding CanyonList}" SeparatorVisibility="None" SelectionMode="None" HasUnevenRows="True">
                     <ListView.ItemTemplate>
